--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-Django==4.2.3
-django-extensions==3.2.3
-django-taggit==4.0.0
-Pillow==10.0.0
-pyOpenSSL==23.2.0
-social-auth-app-django==5.2.0
-Werkzeug==2.3.6
+asgiref>=3.7.2
+Django>=4.2.3
+django-extensions>=3.2.3
+django-taggit>=4.0.0
+easy-thumbnails>=2.8.5
+Pillow>=10.0.0
+pyOpenSSL>=23.2.0
+social-auth-app-django>=5.2.0
+sqlparse>=0.4.4
+Werkzeug>=2.3.6
