--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ db.sqlite3-journal
 media
 .secrets
 mysite_data.json
+static/admin
+static/debug_toolbar
+static/django_extensions
 
 cert.crt
 cert.key
